--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">androidTemplateMethod</string>
+    <string name="home_toolbar_name">我的</string>
 </resources>
